<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_elegir_estado"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:layout_marginBottom="16dp"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupStatusDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:selectionRequired="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipStatusPendingDialog"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estado_pendiente" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipStatusDoneDialog"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estado_realizado" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipStatusPostponedDialog"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estado_aplazado" />
    </com.google.android.material.chip.ChipGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        android:gravity="end">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancelStatusDialog"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:layout_marginEnd="8dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUpdateStatusDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actualizar"/>
    </LinearLayout>
</LinearLayout>