<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.consultareventos.ConsultarEventosFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consultar_por"
        android:textAppearance="?attr/textAppearanceSubtitle1"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/grupoChipTipoConsulta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleSelection="true"
            app:selectionRequired="true"
            android:layout_marginTop="8dp">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipPorRango"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consultar_por_rango"
                android:checked="true"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipPorDia"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consultar_por_dia"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipPorMes"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consultar_por_mes"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipPorAno"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consultar_por_ano"/>
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/layoutOpcionesFiltro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:id="@+id/layoutFiltrosRangoFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fecha_inicial"
                app:startIconDrawable="@drawable/ic_rango_fecha">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFechaInicial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/fecha_final"
                app:startIconDrawable="@drawable/ic_rango_fecha">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFechaFinal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutFiltroDia"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fecha"
            app:startIconDrawable="@drawable/ic_rango_fecha"
            android:visibility="gone">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFechaUnica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"/>
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:id="@+id/layoutFiltrosMesAno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ano">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFiltroAno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilFiltroMes"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/mes"
                android:visibility="gone"> <AutoCompleteTextView
                android:id="@+id/actvFiltroMes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categoria"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            android:layout_marginTop="16dp"/>
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/grupoChipFiltroCategoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleSelection="true"
                android:layout_marginTop="4dp">
                <com.google.android.material.chip.Chip
                    android:id="@+id/chipCategoriaTodas"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/todas_categorias"
                    android:checked="true"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chipCategoriaCitaFiltro"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/categoria_cita"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chipCategoriaJuntaFiltro"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/categoria_junta"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chipCategoriaEntregaFiltro"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/categoria_entrega_proyecto"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chipCategoriaExamenFiltro"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/categoria_examen"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chipCategoriaOtroFiltro"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/categoria_otro"/>
            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConsultar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/consultar"
        android:padding="12dp"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/pista_busqueda"
        app:startIconDrawable="@drawable/ic_consultar">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etBuscarEventos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvEventosConsultados"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_evento_consulta" />

    <TextView
        android:id="@+id/tvSinEventosConsulta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sin_eventos_encontrados"
        android:gravity="center"
        android:visibility="gone"
        android:layout_marginTop="16dp"/>

</LinearLayout>