<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="16dp"
    tools:context=".ui.acercade.AcercaDeFragment">

    <ImageView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@mipmap/ic_launcher_round"
        android:contentDescription="@string/nombre_app"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/tvTituloAppAcercaDe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_acerca_de_app"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/tvVersionAppAcercaDe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Version 1.0"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/tvDescripcionAppAcercaDe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_descripcion_app"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:gravity="center"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/tvDesarrolladoPor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desarrollado_por"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_marginTop="24dp"/>

</LinearLayout>