<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.inicio.InicioFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvTituloEventosHoy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eventos_hoy"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_marginBottom="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvEventosHoy"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_evento" />

        <TextView
            android:id="@+id/tvTituloEventosProximos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eventos_proximos"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvEventosProximos"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_evento" />

        <TextView
            android:id="@+id/tvSinEventosInicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sin_eventos_encontrados"
            android:gravity="center"
            android:visibility="gone"
            android:layout_marginTop="16dp"/>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>